--- a/style.css
+++ b/style.css
@@ -110,17 +110,19 @@ a:hover {
 
 #nav ul {
     display: flex;
-    flex-direction: row;
     justify-content: inherit;
     align-items: stretch;
-    align-content: stretch;
+    align-content: space-between;
     list-style-type: none;
     padding: 0;
     margin: 0;
+    flex-flow: row wrap;
+    row-gap: 4rem;
 }
 
 #nav ul li{
     margin-right: 2rem;
+    white-space: nowrap;
 }
 
 #nav ul li a {
@@ -189,15 +191,19 @@ a:hover {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    align-content: center;
     grid-area: footer;
     background-color: var(--color-dark);
-    padding: 0 20px;
+    gap: 1rem;
+    padding: 1rem 1rem;
     margin: 0;
     font-weight: bold;
-    flex-wrap: wrap-reverse;
+    flex-flow: row wrap-reverse;
 }
 
 #footer ul {
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: row;
     justify-content: inherit;
